Change chezmoi update command
Useful when detached head after working with jj.

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -36,3 +36,12 @@ keepassxc:
     - "2"
   {{- end }}
   database: {{ $keepassxcpath }}
+
+update:
+  command: git
+  args:
+    - pull
+    - --autostash
+    - --rebase
+    - origin
+    - main
