fzf: add configuration

--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,3 +1,4 @@
+export FZF_DEFAULT_OPTS_FILE=~/.config/fzfrc
 export LESS={{ .envvars.less | quote }}
 export PAGER={{ .envvars.pager }}
 export PATH=~/.local/bin:$PATH
