fzf: move config file in a directory

--- a/Documents/PowerShell/envvars.ps1.tmpl
+++ b/Documents/PowerShell/envvars.ps1.tmpl
@@ -1,5 +1,5 @@
 $Env:COLORTERM = 'truecolor'
-$Env:FZF_DEFAULT_OPTS_FILE = "$Env:USERPROFILE\.config\fzfrc"
+$Env:FZF_DEFAULT_OPTS_FILE = "$Env:USERPROFILE\.config\fzf\fzfrc"
 $Env:LESS = {{ .envvars.less | quote }}
 $Env:PAGER = {{ .envvars.pager | quote }}
 $Env:RIPGREP_CONFIG_PATH = "$Env:USERPROFILE\.config\ripgrep\ripgreprc"
