--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,4 +1,4 @@
-export FZF_DEFAULT_OPTS_FILE=~/.config/fzfrc
+export FZF_DEFAULT_OPTS_FILE=~/.config/fzf/fzfrc
 export LESS={{ .envvars.less | quote }}
 export PAGER={{ .envvars.pager }}
 export PATH=~/.local/bin:$PATH
