nushell: simplify zoxide

--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -1,7 +1,7 @@
 let vendor_autoload_dir = $nu.data-dir | path join "vendor" "autoload"
 mkdir $vendor_autoload_dir
 
-zoxide init nushell | save --force ~/.config/zoxide.nu
+zoxide init nushell | save --force ($vendor_autoload_dir | path join "zoxide.nu")
 
 starship init nu | save --force ($vendor_autoload_dir | path join "starship.nu")
 
