--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -5,9 +5,7 @@ zoxide init nushell | save --force ($vendor_autoload_dir | path join "zoxide.nu"
 
 starship init nu | save --force ($vendor_autoload_dir | path join "starship.nu")
 
-# carapace shell completer
-mkdir ~/.cache/carapace
-carapace _carapace nushell | save --force ~/.cache/carapace/init.nu
+carapace _carapace nushell | save --force ($vendor_autoload_dir | path join "carapace.nu")
 
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'vim'
