--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -7,5 +7,7 @@ starship init nu | save --force ($vendor_autoload_dir | path join "starship.nu")
 
 carapace _carapace nushell | save --force ($vendor_autoload_dir | path join "carapace.nu")
 
+broot --print-shell-function nushell | save --force ($vendor_autoload_dir | path join "broot.nu")
+
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'vim'
