nushell: add mise

--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -11,5 +11,7 @@ broot --print-shell-function nushell | save --force ($vendor_autoload_dir | path
 
 tv init nu | save --force ($vendor_autoload_dir | path join "tv.nu")
 
+mise activate nu | save --force ($vendor_autoload_dir | path join "mise.nu")
+
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'vim'
