--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -9,5 +9,7 @@ carapace _carapace nushell | save --force ($vendor_autoload_dir | path join "car
 
 broot --print-shell-function nushell | save --force ($vendor_autoload_dir | path join "broot.nu")
 
+tv init nu | save --force ($vendor_autoload_dir | path join "tv.nu")
+
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'vim'
