--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -13,6 +13,12 @@ tag_disabled = false
 [git_metrics]
 disabled = false
 
+[mise]
+disabled = false
+# `on` is not shown unlike what the documentation says
+format = "on [$symbol$health]($style)"
+symbol = "🍽️ "
+
 [localip]
 disabled = false
 
