--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,5 +1,6 @@
 export FZF_DEFAULT_OPTS_FILE=~/.config/fzf/fzfrc
 export LESS={{ .envvars.less | quote }}
+export MOOR={{ .envvars.moor | quote }}
 export PAGER={{ .envvars.pager }}
 export PATH=~/.local/bin:$PATH
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/ripgreprc
