--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -245,6 +245,8 @@
   diffFilter = delta --color-only
 [log]
   date = relative
+[credential]
+  helper = manager
 [merge]
   conflictStyle = "diff3"
   ff = false
